--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
+    "react-addons-shallow-compare": "^15.6.0",
     "react-dom": "^0.14.3",
     "react-redux": "4.3.0",
     "react-router": "^2.0.1",
-    "react-sparklines": "^1.6.0",
+    "react-sparklines": "1.6.0",
     "redux": "^3.0.4",
     "redux-promise": "^0.5.3",
     "youtube-api-search": "0.0.5"
